--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -13,7 +13,7 @@
   "server": {
     "url": "http://192.168.0.100:8100",
     "cleartext": true,
-    "originalUrl": "http://localhost:8100",
+    "originalUrl": "http://192.168.0.100:8100",
     "originalCleartext": true
   }
 }
