--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "animate.css": "^4.1.1",
     "mapbox-gl": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
