--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic/angular": "^5.5.2",
     "animate.css": "^4.1.1",
     "mapbox-gl": "^2.1.1",
+    "ngx-socket-io": "2.3.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
