--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/service-worker": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/onesignal": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "animate.css": "^4.1.1",
     "mapbox-gl": "^2.1.1",
     "ngx-socket-io": "3.2.0",
+    "onesignal-cordova-plugin": "^2.11.3",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
