--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "~11.2.0",
-    "@capacitor/android": "^2.4.7",
+    "@capacitor/android": "^3.0.0-rc.2",
     "@capacitor/core": "2.4.7",
     "@ionic-native/core": "^5.32.1",
     "@ionic-native/onesignal": "^5.32.1",
